# ffmpegcut

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffmpeg-aarch64-apple-darwin  ffprobe-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  video_server.rs
src/components/: Timeline.tsx
src/lib/: tauri.ts
src/pages/: Home.tsx  template.tsx
