[package]
name = "ffmpegcut"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ffmpegcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
urlencoding = "2"
percent-encoding = "2"
tokio-util = { version = "0.7", features = ["io"] }
